--- a/app/src/main/res/layout/content_searching.xml
+++ b/app/src/main/res/layout/content_searching.xml
@@ -25,7 +25,9 @@
             android:layout_height="wrap_content"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             tools:context="com.milligram.milligram.SearchingActivity"
-            tools:showIn="@layout/activity_searching">
+            tools:showIn="@layout/activity_searching"
+            android:focusable="true"
+            android:focusableInTouchMode="true">
 
             <EditText
                 android:layout_width="wrap_content"
